# cdubos-fr.github.io

./: .gitignore  .pre-commit-config.yaml  Justfile  LICENSE  README.md  flake.nix  pyproject.toml  requirements.txt
.github/: copilot-instructions.md  settings.yml
.github/workflows/: ci.yaml  deploy-to-aws.yaml  deploy-to-pages.yaml  deploy.yaml  deploy.yml  validate.yml
cdubos-vitrine/source/: conf.py  index.rst
iac/: Pulumi.prod.yaml  Pulumi.yaml  __main__.py
source/: articles.md  conf.py  config.toml  contact.md  cv.md  index.md  projets.md  resources.md
source/_tags/: AWS.md  Azure.md  C#.md  C.md  Dask.md  Django.md  ElasticStack.md  FastAPI.md  GithubAction.md  GitlabCI.md  Java.md  Jenkins.md  PostGres.md  Pulumi.md  Pydantic.md  Python.md  Scala.md  Spark.md  Terraform.md  tagsindex.md
source/content/: _index.md  about.md  contact.md  mentions-legales.md  parcours.md  references.md  solutions.md
source/content/about/: _index.md  concret.md  facon.md  mission.md  principes.md  reperes.md  sobriete.md  travailler-ensemble.md
source/content/memo/: _index.md  devops.md  environnement-dev.md  python.md  rust.md
source/content/parcours/: 2017-isagri.md  2018-sopra1.md  2018-sopra2.md  2019-sopra.md  2019-ywh.md  2020-bva.md  2020-extia.md  2021-bva.md  2021-csgroup.md  2022-bimpli.md  2023-bimpli.md  2023-extia.md  2023-loft-orbital.md  2025-devoc.md  _index.md
source/content/references/: _index.md  articles-data.md  articles-recherche.md  projets-infra.md  projets-outils.md
source/content/references/articles/: _index.md  article-pres.md  articles-data.md  articles-quality.md
source/content/solutions/: _index.md  automatisation.md  maintenance.md  site-statique.md  tableaux.md
source/cv/: activites_annexes.md  competences.md  experiences.md  formations.md  index.md
source/memo/: devops.md  environnement-dev.md  index.md  python.md  rust.md
source/static/: robots.txt  sitemap.xml  style.css
source/templates/: base.html  index.html  page.html  section.html  section_about.html  section_parcours.html  section_references.html  section_solutions.html
(+8 files in other folders)
